[gd_scene load_steps=4 format=3 uid="uid://qfjvvh78rq1k"]

[ext_resource type="Script" path="res://Scenes and scripts/Menus/main_menu.gd" id="1_aj3kq"]
[ext_resource type="FontFile" uid="uid://bsgngl7m1e6g7" path="res://assets/fonts/PixelOperator8.ttf" id="2_63rrj"]
[ext_resource type="Texture2D" uid="uid://f2o7lfpkf5a1" path="res://assets/Images/main_image.jpg" id="3_ydtty"]

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aj3kq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -172.0
offset_right = 236.0
grow_vertical = 0

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_63rrj")
theme_override_font_sizes/font_size = 32
text = "Continue"

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_63rrj")
theme_override_font_sizes/font_size = 32
text = "New Game"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_63rrj")
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_63rrj")
theme_override_font_sizes/font_size = 32
text = "Quit
"

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_ydtty")

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
